--- a/package.conf
+++ b/package.conf
@@ -7,13 +7,15 @@
 # The LLNL's package configuration script for LaunchMON
 #
 # Update:
+#         Mar 09 2008 DHA: Updated for 0.7.0 release including
+#                          BlueGene/P support     
 #         Dec 15 2008 DHA: Updated for 0.6.4 release which includes 
 #                          fixes for software configuration problems
 #         Sep 28 2008 DHA: Updated for LaunchMON 0.6 release 
 #
 #
 
-_vers=0.6
+_vers=0.7
 PKG_NAME=launchmon-${_vers}
 PKG_VERSION=9
 PKG_SECTION=tools
