--- a/test/src/test.LE_model_checker_extreme.in
+++ b/test/src/test.LE_model_checker_extreme.in
@@ -28,6 +28,7 @@
 #--------------------------------------------------------------------------------
 #
 #  Update Log:
+#        Mar 06 2009 DHA: Changed bglrm to bgrm
 #        Jun 12 2008 DHA: Created file.
 #
 
@@ -35,7 +36,7 @@ NUMTASKS=524288
 RM_TYPE=@RMTP@
 LMON_OPTS=""
                                                                                                                                                                       
-if test "x$RM_TYPE" = "xbglrm" ; then
+if test "x$RM_TYPE" = "xbgrm" ; then
   LMON_OPTS="--pmgr bgl:21000"
 fi
 
