--- a/test/src/test.attach_1_pdebugmax.in
+++ b/test/src/test.attach_1_pdebugmax.in
@@ -30,6 +30,7 @@
 #  Attach the tool to a running program and unlock the hang. 
 #
 #  Update Log:
+#        Mar 06 2009 DHA: Changed bglrm to bgrm
 #        Jun 16 2008 DHA: Created file.
 #
  
@@ -41,14 +42,14 @@ MPI_JOB_LAUNCHER_PATH=@TJLPATH@
 RM_TYPE=@RMTP@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 
-if test "x$RM_TYPE" = "xbglrm" ; then
+if test "x$RM_TYPE" = "xbgrm" ; then
   echo "[LMON FE] Test Not Implemented Yet"
   exit 1
 fi
  
 if test "x$RM_TYPE" = "xslurm" ; then
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
-elif test "x$RM_TYPE" = "xbglrm" ; then 
+elif test "x$RM_TYPE" = "xbgrm" ; then 
   $MPI_JOB_LAUNCHER_PATH -verbose 0 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
 else
   echo "This RM is not supported yet" 
