--- a/test/src/test.attach_1_remote.in
+++ b/test/src/test.attach_1_remote.in
@@ -31,6 +31,7 @@
 #  of its associated job.
 #
 #  Update Log:
+#        Mar 06 2009 DHA: Changed bglrm to bgrm
 #        Dec 14 2008 DHA: configurable NUMNODES
 #        Jun 16 2008 DHA: Created file.
 #
@@ -38,7 +39,7 @@
 RM_TYPE=@RMTP@
 NUMNODES=@NNODES@
 
-if test "x$RM_TYPE" = "xbglrm" ; then
+if test "x$RM_TYPE" = "xbgrm" ; then
   rm -f nohup.out
 fi
 
@@ -52,7 +53,7 @@ export FEN_RM_DISTRIBUTED=1
 
 if test "x$RM_TYPE" = "xslurm" ; then
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
-elif test "x$RM_TYPE" = "xbglrm" ; then
+elif test "x$RM_TYPE" = "xbgrm" ; then
   $MPI_JOB_LAUNCHER_PATH -verbose 0 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
 else
   echo "This RM is not supported yet"
