--- a/test/src/test.attach_4_shutdownbe.in
+++ b/test/src/test.attach_4_shutdownbe.in
@@ -31,6 +31,7 @@
 #  shut down BE daemons . 
 #
 #  Update Log:
+#        Mar 06 2009 DHA: Changed bglrm to bgrm
 #        Dec 14 2008 DHA: configurable NUMNODES
 #        Jun 16 2008 DHA: Created file.
 #
@@ -38,7 +39,7 @@
 RM_TYPE=@RMTP@
 NUMNODES=@NNODES@
 
-if test "x$RM_TYPE" = "xbglrm" ; then
+if test "x$RM_TYPE" = "xbgrm" ; then
   rm -f nohup.out
   echo "[LMON FE] Test Not Implemented Yet"
   exit 1
@@ -53,7 +54,7 @@ export LMON_FE_SHUTDOWNBE_TEST=1
 
 if test "x$RM_TYPE" = "xslurm" ; then
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
-elif test "x$RM_TYPE" = "xbglrm" ; then 
+elif test "x$RM_TYPE" = "xbgrm" ; then 
   $MPI_JOB_LAUNCHER_PATH -verbose 0 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
 else
   echo "This RM is not supported yet" 
