--- a/test/src/test.jobsnap_1.in
+++ b/test/src/test.jobsnap_1.in
@@ -30,13 +30,14 @@
 #  Attach the tool to a running program and collect jobsnap data.
 #
 #  Update Log:
+#        Mar 06 2009 DHA: Changed bglrm to bgrm
 #        Jun 17 2008 DHA: Created file.
 #
 
 RM_TYPE=@RMTP@
 NUMNODES=@NNODES@
 NOHUP=""
-if test "x$RM_TYPE" = "xbglrm" ; then
+if test "x$RM_TYPE" = "xbgrm" ; then
   NOHUP=nohup
   rm -f nohup.out
   echo "[LMON FE] Test Not Implemented Yet"
@@ -52,7 +53,7 @@ export JOBSNAP_TEST=1
  
 if test "x$RM_TYPE" = "xslurm" ; then
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
-elif test "x$RM_TYPE" = "xbglrm" ; then 
+elif test "x$RM_TYPE" = "xbgrm" ; then 
   $MPI_JOB_LAUNCHER_PATH -verbose 0 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
 else
   echo "This RM is not supported yet" 
