--- a/test/src/test.launch_1.in
+++ b/test/src/test.launch_1.in
@@ -31,6 +31,7 @@
 #  one daemon per node, which unlocks the initial hang of all tasks. 
 #
 #  Update Log:
+#        Mar 06 2009 DHA: Changed bglrm to bgrm
 #        Dec 14 2008 DHA: configurable NUMNODES
 #        Jun 13 2008 DHA: Created file.
 #
@@ -38,7 +39,7 @@
 RM_TYPE=@RMTP@
 NUMNODES=@NNODES@
 NOHUP=""
-if test "x$RM_TYPE" = "xbglrm" ; then
+if test "x$RM_TYPE" = "xbgrm" ; then
   NOHUP=nohup
   rm -f nohup.out
 fi
